--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,6 +2,8 @@ name: integration
 on: 
   pull_request: 
     branches: [ main, develop ]
+  push:
+    branches: [ main, develop ]
   workflow_dispatch:
 jobs:
   test:
