--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.54.9",
     "uuid": "^9.0.0",
     "web-vitals": "^1.1.1"
@@ -53,8 +53,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^2.7.1"
   },
-  "homepage": "https://feder240516.github.io/personal-page/"
+  "homepage": "https://federicoreina.com"
 }
