--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -55,6 +56,9 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^6.1.1",
     "prettier": "^2.7.1"
+  },
+  "engines": {
+    "node": ">=18.20"
   },
   "homepage": "https://federicoreina.com"
 }
